--- a/.github/workflows/compile_dev_core.yml
+++ b/.github/workflows/compile_dev_core.yml
@@ -3,7 +3,7 @@ name: Compile The New Clash Dev Core
 
 on:
   schedule:
-    - cron: "0 19 * * 0,2,4,6"
+    - cron: "0 2 * * *"
   workflow_dispatch:
 
 jobs:
